Merged revisions 18095-18096,18154,18177,18184-18185,18269,18272,18289 via svnmerge from https://svn.jboss.org/repos/jbossws/stack/cxf/trunk
........
  r18095 | asoldano | 2013-11-18 19:08:22 +0100 (Mon, 18 Nov 2013) | 2 lines
  
  [JBWS-3736] soap:address rewrite does not consider wsdlLocation in SEI @WebService
........
  r18096 | asoldano | 2013-11-19 16:47:28 +0100 (Tue, 19 Nov 2013) | 2 lines
  
  [JBWS-3731] Improving javadoc
........
  r18154 | asoldano | 2013-12-09 12:04:23 +0100 (Mon, 09 Dec 2013) | 2 lines
  
  [JBWS-3743] Block HTTP GET requests with no query string
........
  r18177 | asoldano | 2013-12-13 13:26:19 +0100 (Fri, 13 Dec 2013) | 2 lines
  
  [JBWS-3740] Drop AS 7.1.x support
........
  r18184 | asoldano | 2013-12-16 21:42:36 +0100 (Mon, 16 Dec 2013) | 2 lines
  
  [JBWS-3709] Modifying testcase a bit to avoid counting probe matches from different hosts on the same network when possible. Moreover, actually checking match count on resolve matches only, as the address is optional and can theoretically be omitted in probe matches.
........
  r18185 | asoldano | 2013-12-16 21:46:04 +0100 (Mon, 16 Dec 2013) | 2 lines
  
  [JBWS-3709] Restoring TIMEOUT setup when sending probe messages
........
  r18269 | asoldano | 2014-01-21 15:44:00 +0100 (Tue, 21 Jan 2014) | 2 lines
  
  [JBWS-3662] Improving checks on availability of BouncyCastle and JCE unlimited strength crypto; also adding a check before running tests (and hence before any client side automatic registration of security provider).
........
  r18272 | asoldano | 2014-01-22 15:53:45 +0100 (Wed, 22 Jan 2014) | 2 lines
  
  [JBWS-3722] Explicitly set JAXB impl / xjc dependencies in jbossws-cxf-client to be sure the dependencyManagement blocks from jbossws-cxf main pom.xml are used to choose the version. This prevent different versions (2.1 vs 2.2) from being used depending on the current JDK (Apache CXF has a maven profile that sets jaxb version depending on current jdk)
........
  r18289 | asol