@@ -101,25 +101,6 @@
       <artifactId>commons-logging</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.littleshoot</groupId>
-      <artifactId>littleproxy</artifactId>
-      <version>${org.littleshoot.littleproxy.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>net.sf.ehcache</groupId>
-          <artifactId>ehcache-core</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk16</artifactId>
       <version>${bc.version}</version>
@@ -614,146 +595,6 @@
     </profile>
 
     <!--
-    Name:  jboss712
-    Descr: JBoss-7.1.2 specific options
-    -->
-    <profile>
-      <id>jboss712</id>
-      <properties>
-        <jboss.version>${jboss712.version}</jboss.version>
-        <jbossws.integration.target>jboss712</jbossws.integration.target>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.ws</groupId>
-          <artifactId>jbossws-jboss712-tests-integration</artifactId>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArguments>
-                <endorseddirs>${project.build.directory}/endorsed</endorseddirs>
-              </compilerArguments>
-            </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${project.build.directory}/endorsed</argLine>
-              <excludes>
-                 <!--# [CXF-1519] Explicitly set the namespace of a WebFault-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws1904/**</exclude>
-
-                 <!--# [CXF-2006] RespectBinding feature and not understood required extensibility elements-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws2449/**</exclude>
-
-                 <!--# [JBWS-2561] XOP request not properly inlined-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/xop/doclit/XOPHandlerTestCase.*</exclude>
-
-                 <!--# [JBWS-2480] Soap attachments are dropped on server response-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws1283/**</exclude>
-
-                 <!-- # [JBWS-3493] WS-Trust tests w/ PicketLink STS require PL 2.1.2.Final or greater -->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustPicketLinkTestCase*</exclude>
-
-                 <!-- # Tests migrated from JBossWS-Native specific testsuite which are meant to pass with JBossWS-CXF too, but are still to be fixed -->
-                 <exclude>org/jboss/test/ws/jaxws/jbws2978/**</exclude>
-
-                 <!--# [JBWS-3441] Support CDI interceptors for POJO JAX-WS services  -->
-                 <exclude>org/jboss/test/ws/jaxws/jbws3441/**</exclude>
-
-                 <!--# [AS7-537] Fixed on AS 8 or greater -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/noIntegration/AS7537TestCase**</exclude>
-
-                 <!--# [JBWS-3560] fastinfoset module is required in as712  -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/fastinfoset/FastInfosetTestCase*</exclude>
-
-                 <!--# [WFLY-308] Provide facility for running ejb3 ws endpoints authorization independently  -->
-                 <exclude>org/jboss/test/ws/jaxws/handlerauth/HandlerAuthTestCase*</exclude>
-
-                 <!-- Manually setup KDC before run this test-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/kerberos/*TestCase*</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!--
-    Name:  jboss713
-    Descr: JBoss-7.1.3 specific options
-    -->
-    <profile>
-      <id>jboss713</id>
-      <properties>
-        <jboss.version>${jboss713.version}</jboss.version>
-        <jbossws.integration.target>jboss713</jbossws.integration.target>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.ws</groupId>
-          <artifactId>jbossws-jboss713-tests-integration</artifactId>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArguments>
-                <endorseddirs>${project.build.directory}/endorsed</endorseddirs>
-              </compilerArguments>
-            </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${project.build.directory}/endorsed</argLine>
-              <excludes>
-                 <!--# [CXF-1519] Explicitly set the namespace of a WebFault-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws1904/**</exclude>
-
-                 <!--# [CXF-2006] RespectBinding feature and not understood required extensibility elements-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws2449/**</exclude>
-
-                 <!--# [JBWS-2561] XOP request not properly inlined-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/xop/doclit/XOPHandlerTestCase.*</exclude>
-
-                 <!--# [JBWS-2480] Soap attachments are dropped on server response-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws1283/**</exclude>
-
-                 <!-- # [JBWS-3493] WS-Trust tests w/ PicketLink STS require PL 2.1.2.Final or greater -->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustPicketLinkTestCase*</exclude>
-
-                 <!-- # Tests migrated from JBossWS-Native specific testsuite which are meant to pass with JBossWS-CXF too, but are still to be fixed -->
-                 <exclude>org/jboss/test/ws/jaxws/jbws2978/**</exclude>
-
-                 <!--# [JBWS-3441] Support CDI interceptors for POJO JAX-WS services  -->
-                 <exclude>org/jboss/test/ws/jaxws/jbws3441/**</exclude>
-
-                 <!--# [AS7-537] Fixed on AS 8 or greater -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/noIntegration/AS7537TestCase**</exclude>
-
-                 <!--# [JBWS-3560] fastinfoset module is required in as713  -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/fastinfoset/FastInfosetTestCase*</exclude>
-
-                 <!--# [WFLY-308] Provide facility for running ejb3 ws endpoints authorization independently  -->
-                 <exclude>org/jboss/test/ws/jaxws/handlerauth/HandlerAuthTestCase*</exclude>
-
-                 <!-- Manually setup KDC before run this test-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/kerberos/*TestCase*</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!--
     Name:  jboss720
     Descr: JBoss-7.2.0 specific options
     -->
@@ -767,6 +608,26 @@
         <dependency>
           <groupId>org.jboss.ws</groupId>
           <artifactId>jbossws-jboss720-tests-integration</artifactId>
+        </dependency>
+        <!-- LittleProxy depencency declared in this profile as other profiles require different exclusions -->
+        <dependency>
+          <groupId>org.littleshoot</groupId>
+          <artifactId>littleproxy</artifactId>
+          <version>${org.littleshoot.littleproxy.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-api</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-log4j12</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>net.sf.ehcache</groupId>
+              <artifactId>ehcache-core</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
       </dependencies>
       <build>
@@ -837,6 +698,31 @@
           <groupId>org.wildfly</groupId>
           <artifactId>wildfly-webservices-tests-integration</artifactId>
           <version>${jboss.version}</version>
+        </dependency>
+        <!-- LittleProxy depencency declared in this profile as other profiles require different exclusions -->
+        <dependency>
+          <groupId>org.littleshoot</groupId>
+          <artifactId>littleproxy</artifactId>
+          <version>${org.littleshoot.littleproxy.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-api</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-log4j12</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>net.sf.ehcache</groupId>
+              <artifactId>ehcache-core</artifactId>
+            </exclusion>
+            <!-- Let the container messaging subsystem control the Netty dependency version  -->
+            <exclusion>
+              <groupId>io.netty</groupId>
+              <artifactId>netty-all</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
       </dependencies>
       <build>
